--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
+
         <!-- SLF4J API -->
         <dependency>
             <groupId>org.slf4j</groupId>
