--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <lombok.version>1.18.38</lombok.version>
         <jackson.version>2.17.2</jackson.version>
         <google.cloud.libraries.bom.version>26.38.0</google.cloud.libraries.bom.version>
-        <slf4j.version>2.0.13</slf4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
         <logback.version>1.5.11</logback.version>
         <jetbrains.annotations.version>26.0.1</jetbrains.annotations.version>
         <org.json.version>20240303</org.json.version>
@@ -68,12 +68,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.18.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.18.2</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
